tests/snapshots/formats__psarc__lzma.psarc.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ lzma.psarc — PSARC 1.4, 4 entries, lzma, 13.3 KiB uncompressed  [0x0+0x1985]
    Magic: "PSAR"  [0x0+0x4]
    Version major: 1  [0x4+0x2]
    Version minor: 4  [0x6+0x2]
    Compression: "lzma"  [0x8+0x4]
    TOC length: 166  [0xc+0x4]
    TOC entry size: 30  [0x10+0x4]
    TOC entries: 4  [0x14+0x4]
    Block size: 4096  [0x18+0x4]
    Archive flags: 0x2  [0x1c+0x4]
  ▾ Table of contents — 4 entries  [0x20+0x78]
    ▾ Entry 0 (manifest)  [0x20+0x1e]
        Name digest (MD5): 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |................|  [0x20+0x10]
        First block: 0  [0x30+0x4]
        Uncompressed size: 47 — 47 bytes  [0x34+0x5]
        Offset: 0xa6  [0x39+0x5]
    ▾ Entry 1  [0x3e+0x1e]
        Name digest (MD5): 5b 02 50 7a c9 9c f8 fc 94 f5 7e 4c e3 2d fa 28  |[.Pz......~L.-.(|  [0x3e+0x10]
        First block: 1  [0x4e+0x4]
        Uncompressed size: 9000 — 8.8 KiB  [0x52+0x5]
        Offset: 0xd5  [0x57+0x5]
    ▾ Entry 2  [0x5c+0x1e]
        Name digest (MD5): 4c df 10 51 3e c2 65 00 44 65 6b 3f 34 d4 3d ec  |L..Q>.e.Dek?4.=.|  [0x5c+0x10]
        First block: 4  [0x6c+0x4]
        Uncompressed size: 4608 — 4.5 KiB  [0x70+0x5]
        Offset: 0xa84  [0x75+0x5]
    ▾ Entry 3  [0x7a+0x1e]
        Name digest (MD5): 28 e1 e7 78 bd 78 2d db d8 8c 7f 67 c3 6b 8a 2a  |(..x.x-....g.k.*|  [0x7a+0x10]
        First block: 6  [0x8a+0x4]
        Uncompressed size: 18 — 18 bytes  [0x8e+0x5]
        Offset: 0x1973  [0x93+0x5]
    Block sizes — 7 blocks, 2-byte entries  [0x98+0xe]
  ▾ Manifest — UTF-8 text, LF line endings, 3 lines  [0xa6+0x2f]
      Encoding: "UTF-8"
      Line endings: "LF" — 2 LF, 0 CRLF, 0 CR
    ▾ Lines — 3 lines  [#1:0x0+0x2f]
        Line 1: "/docs/readme.txt"  [#1:0x0+0x10]
        Line 2: "/data/noise.bin"  [#1:0x11+0xf]
        Line 3: "/data/tail.txt"  [#1:0x21+0xe]
  ▾ /docs/readme.txt — UTF-8 text, CRLF line endings, 119 lines  [0xd5+0x9af]
      Encoding: "UTF-8"
      Line endings: "CRLF" — 0 LF, 118 CRLF, 0 CR
    ▾ Lines — 119 lines  [#2:0x0+0x2328]
        Line 1: "while lazy bulletin old the disks lazy floppy the bytes bytes dogs 12"  [#2:0x0+0x45]
        Line 2: " fox fox the tiny old dogs fox the old into bytes while 24"  [#2:0x47+0x3a]
        Line 3: " disks quick fox jumps old dogs tiny brown disks fox and bytes 36"  [#2:0x83+0x41]
        Line 4: " while jumps lazy old while and over into jumps into over brown 48"  [#2:0xc6+0x42]
        Line 5: " dogs lazy bulletin and quick bytes dogs tiny archivers floppy squeeze fox 60"  [#2:0x10a+0x4d]
        Line 6: " bulletin archivers the bulletin squeeze fox lazy and fox boards disks squeeze 72"  [#2:0x159+0x51]
        Line 7: " old brown lazy floppy lazy dogs quick into old into disks squeeze 84"  [#2:0x1ac+0x45]
        Line 8: " the quick dogs and quick archivers jumps quick tiny archivers over the 96"  [#2:0x1f3+0x4a]
        Line 9: " bytes brown floppy bulletin squeeze disks disks while fox over disks floppy 108"  [#2:0x23f+0x50]
        Line 10: " squeeze old old into over dogs and brown the bytes while dogs 120"  [#2:0x291+0x42]
        Line 11: " into floppy quick bulletin boards and tiny quick quick old tiny quick 132"  [#2:0x2d5+0x4a]
        Line 12: " archivers disks brown lazy boards and bulletin dogs and the over boards 144"  [#2:0x321+0x4c]
        Line 13: " over disks bytes tiny dogs lazy disks lazy brown and floppy and 156"  [#2:0x36f+0x44]
        Line 14: " the bulletin tiny squeeze brown fox boards bytes fox brown into fox 168"  [#2:0x3b5+0x48]
        Line 15: " the squeeze quick over boards bytes quick squeeze while into lazy fox 180"  [#2:0x3ff+0x4a]
        Line 16: " jumps archivers over jumps jumps the over the quick bulletin boards dogs 192"  [#2:0x44b+0x4d]
        Line 17: " over and disks while lazy brown lazy jumps bulletin floppy and brown 204"  [#2:0x49a+0x49]
        Line 18: " archivers jumps bytes and brown old dogs bytes floppy quick bytes lazy 216"  [#2:0x4e5+0x4b]
        Line 19: " jumps quick disks archivers fox squeeze dogs quick the brown dogs old 228"  [#2:0x532+0x4a]
        Line 20: " fox and quick into quick boards lazy bulletin bytes while tiny and 240"  [#2:0x57e+0x47]
        Line 21: " fox old floppy squeeze the tiny the and old jumps bytes archivers 252"  [#2:0x5c7+0x46]
        Line 22: " jumps quick bulletin old bulletin dogs old jumps archivers floppy into fox 264"  [#2:0x60f+0x4f]
        Line 23: " old old boards and squeeze over over fox dogs old over fox 276"  [#2:0x660+0x3f]
        Line 24: " bytes brown lazy squeeze archivers disks old lazy brown fox archivers squeeze 288"  [#2:0x6a1+0x52]
        Line 25: " dogs tiny quick boards while lazy boards bytes squeeze over into boards 300"  [#2:0x6f5+0x4c]
        Line 26: " brown bulletin floppy dogs boards floppy archivers squeeze and while archivers over 312"  [#2:0x743+0x58]
        Line 27: " bulletin and archivers and while into and brown fox lazy while fox 324"  [#2:0x79d+0x47]
        Line 28: " disks old dogs into archivers brown boards the over while and into 336"  [#2:0x7e6+0x47]
        Line 29: " brown quick quick old and bytes bytes dogs lazy while while tiny 348"  [#2:0x82f+0x45]
        Line 30: " tiny jumps squeeze the brown into lazy bytes lazy into the bulletin 360"  [#2:0x876+0x48]
        Line 31: " brown quick dogs jumps bytes tiny boards bytes jumps floppy floppy fox 372"  [#2:0x8c0+0x4b]
        Line 32: " squeeze fox squeeze into boards jumps squeeze archivers old jumps lazy while 384"  [#2:0x90d+0x51]
        Line 33: " quick dogs fox quick bulletin quick dogs fox fox disks fox boards 396"  [#2:0x960+0x46]
        Line 34: " floppy jumps jumps tiny into bytes bytes bulletin while old bytes squeeze 408"  [#2:0x9a8+0x4e]
        Line 35: " brown quick archivers archivers fox floppy disks tiny archivers old brown jumps 420"  [#2:0x9f8+0x54]
        Line 36: " disks archivers bytes while over brown dogs old squeeze floppy quick brown 432"  [#2:0xa4e+0x4f]
        Line 37: " quick disks jumps squeeze archivers jumps dogs jumps archivers quick bulletin disks 444"  [#2:0xa9f+0x58]
        Line 38: " archivers jumps tiny and squeeze archivers while disks into lazy brown jumps 456"  [#2:0xaf9+0x51]
        Line 39: " disks into and tiny squeeze boards quick fox quick bytes tiny the 468"  [#2:0xb4c+0x46]
        Line 40: " dogs floppy boards tiny floppy over dogs old quick while squeeze floppy 480"  [#2:0xb94+0x4c]
        Line 41: " jumps dogs old over dogs quick squeeze quick over over squeeze old 492"  [#2:0xbe2+0x47]
        Line 42: " boards fox tiny floppy fox bytes squeeze lazy old boards old the 504"  [#2:0xc2b+0x45]
        Line 43: " and floppy bytes old bytes quick the lazy boards fox while tiny 516"  [#2:0xc72+0x44]
        Line 44: " while brown jumps tiny floppy brown over while squeeze fox brown disks 528"  [#2:0xcb8+0x4b]
        Line 45: " and lazy dogs over bulletin floppy bytes tiny quick archivers tiny the 540"  [#2:0xd05+0x4b]
        Line 46: " fox boards over boards and lazy lazy into floppy and jumps brown 552"  [#2:0xd52+0x45]
        Line 47: " tiny brown old and the disks old dogs archivers into into quick 564"  [#2:0xd99+0x44]
        Line 48: " tiny disks bulletin squeeze into floppy over tiny dogs and tiny floppy 576"  [#2:0xddf+0x4b]
        Line 49: " squeeze old fox bytes jumps floppy over fox brown bulletin and tiny 588"  [#2:0xe2c+0x48]
        Line 50: " jumps into old old squeeze archivers brown lazy boards bytes old and 600"  [#2:0xe76+0x49]
        Line 51: " boards and while dogs brown squeeze brown bytes bytes squeeze archivers and 612"  [#2:0xec1+0x50]
        Line 52: " bytes floppy bytes boards disks while lazy over into lazy while bytes 624"  [#2:0xf13+0x4a]
        Line 53: " lazy squeeze archivers while floppy squeeze tiny lazy brown quick bytes floppy 636"  [#2:0xf5f+0x53]
        Line 54: " tiny lazy lazy boards while over disks brown brown bulletin quick the 648"  [#2:0xfb4+0x4a]
        Line 55: " tiny fox fox while lazy disks floppy quick quick jumps the dogs 660"  [#2:0x1000+0x44]
        Line 56: " bytes floppy while jumps dogs bulletin old archivers brown into quick the 672"  [#2:0x1046+0x4e]
        Line 57: " floppy lazy quick while old boards boards the archivers disks over into 684"  [#2:0x1096+0x4c]
        Line 58: " floppy fox and disks floppy while old brown disks squeeze disks quick 696"  [#2:0x10e4+0x4a]
        Line 59: " bytes old squeeze disks boards into into floppy lazy floppy jumps disks 708"  [#2:0x1130+0x4c]
        Line 60: " floppy archivers fox and boards boards jumps old the brown fox into 720"  [#2:0x117e+0x48]
        Line 61: " while floppy old fox archivers and brown brown bulletin into and jumps 732"  [#2:0x11c8+0x4b]
        Line 62: " boards into disks while dogs squeeze lazy the bytes while jumps quick 744"  [#2:0x1215+0x4a]
        Line 63: " into tiny the the tiny and old while disks tiny floppy into 756"  [#2:0x1261+0x40]
        Line 64: " dogs into into dogs bulletin bulletin disks while disks quick lazy fox 768"  [#2:0x12a3+0x4b]
        Line 65: " while fox floppy over bulletin over disks quick and floppy jumps floppy 780"  [#2:0x12f0+0x4c]
        Line 66: " squeeze and tiny and boards jumps quick squeeze quick squeeze fox the 792"  [#2:0x133e+0x4a]
        Line 67: " floppy old squeeze dogs bytes tiny and while jumps brown boards dogs 804"  [#2:0x138a+0x49]
        Line 68: " floppy the old and over tiny quick while old old disks while 816"  [#2:0x13d5+0x41]
        Line 69: " brown archivers the fox archivers disks and bulletin and into the bytes 828"  [#2:0x1418+0x4c]
        Line 70: " into disks fox fox fox disks and archivers and quick jumps into 840"  [#2:0x1466+0x44]
        Line 71: " dogs tiny dogs bytes floppy bulletin and and while dogs floppy fox 852"  [#2:0x14ac+0x47]
        Line 72: " and jumps lazy floppy over fox quick into bulletin lazy while the 864"  [#2:0x14f5+0x46]
        Line 73: " lazy lazy tiny brown lazy and jumps old brown bytes over tiny 876"  [#2:0x153d+0x42]
        Line 74: " tiny boards over floppy into the the over bulletin bulletin disks jumps 888"  [#2:0x1581+0x4c]
        Line 75: " over bulletin brown disks while the lazy lazy floppy dogs quick fox 900"  [#2:0x15cf+0x48]
        Line 76: " brown squeeze archivers quick brown brown the while disks jumps and bytes 912"  [#2:0x1619+0x4e]
        Line 77: " old while bytes dogs quick archivers the disks dogs squeeze over brown 924"  [#2:0x1669+0x4b]
        Line 78: " old fox dogs floppy while the bytes old fox boards archivers quick 936"  [#2:0x16b6+0x47]
        Line 79: " fox dogs fox over boards bulletin old dogs disks squeeze squeeze tiny 948"  [#2:0x16ff+0x4a]
        Line 80: " brown quick brown quick brown and disks the fox bulletin the lazy 960"  [#2:0x174b+0x46]
        Line 81: " bytes jumps disks squeeze archivers tiny dogs and archivers and the over 972"  [#2:0x1793+0x4d]
        Line 82: " archivers over over fox boards archivers bytes fox archivers brown quick brown 984"  [#2:0x17e2+0x53]
        Line 83: " archivers and fox the into over the brown floppy jumps the squeeze 996"  [#2:0x1837+0x47]
        Line 84: " disks disks archivers jumps into bytes quick disks old floppy while tiny 1008"  [#2:0x1880+0x4e]
        Line 85: " the the the while jumps bulletin brown dogs boards quick disks squeeze 1020"  [#2:0x18d0+0x4c]
        Line 86: " dogs tiny disks over and boards archivers bytes jumps jumps boards while 1032"  [#2:0x191e+0x4e]
        Line 87: " tiny the boards and the dogs floppy brown quick lazy floppy brown 1044"  [#2:0x196e+0x47]
        Line 88: " while while and squeeze tiny while and into and lazy jumps into 1056"  [#2:0x19b7+0x45]
        Line 89: " dogs quick squeeze into archivers bulletin brown the jumps floppy and archivers 1068"  [#2:0x19fe+0x55]
        Line 90: " floppy brown brown bytes old squeeze the quick lazy over and while 1080"  [#2:0x1a55+0x48]
        Line 91: " and disks bulletin brown disks fox bytes floppy boards boards boards bytes 1092"  [#2:0x1a9f+0x50]
        Line 92: " tiny boards archivers dogs squeeze lazy while over fox floppy while quick 1104"  [#2:0x1af1+0x4f]
        Line 93: " old bytes the over lazy the fox into lazy and into lazy 1116"  [#2:0x1b42+0x3d]
        Line 94: " squeeze bytes dogs disks boards over old boards old bulletin the squeeze 1128"  [#2:0x1b81+0x4e]
        Line 95: " the fox bytes jumps brown boards archivers floppy fox jumps squeeze lazy 1140"  [#2:0x1bd1+0x4e]
        Line 96: " and and boards and the bytes the old over bulletin brown tiny 1152"  [#2:0x1c21+0x43]
        Line 97: " brown and dogs jumps quick jumps fox archivers into over while over 1164"  [#2:0x1c66+0x49]
        Line 98: " brown bytes bytes squeeze old while the while tiny over the into 1176"  [#2:0x1cb1+0x46]
        Line 99: " boards jumps jumps boards bytes bytes jumps brown and archivers lazy old 1188"  [#2:0x1cf9+0x4e]
        Line 100: " bytes the over bulletin bytes old brown over squeeze tiny lazy and 1200"  [#2:0x1d49+0x48]
        Line 101: " over fox while lazy over squeeze fox tiny while into the squeeze 1212"  [#2:0x1d93+0x46]
        Line 102: " jumps fox boards while brown quick into dogs and tiny jumps old 1224"  [#2:0x1ddb+0x45]
        Line 103: " the boards boards disks dogs bytes floppy over tiny quick squeeze lazy 1236"  [#2:0x1e22+0x4c]
        Line 104: " archivers disks bytes archivers and bytes lazy dogs squeeze brown into bytes 1248"  [#2:0x1e70+0x52]
        Line 105: " squeeze bytes archivers brown disks dogs disks jumps over old tiny boards 1260"  [#2:0x1ec4+0x4f]
        Line 106: " fox brown while squeeze and fox bytes fox and boards fox archivers 1272"  [#2:0x1f15+0x48]
        Line 107: " bytes into floppy brown floppy tiny lazy brown floppy floppy archivers lazy 1284"  [#2:0x1f5f+0x51]
        Line 108: " archivers dogs squeeze squeeze jumps quick into jumps disks over bytes squeeze 1296"  [#2:0x1fb2+0x54]
        Line 109: " squeeze jumps and jumps tiny old squeeze tiny disks dogs brown boards 1308"  [#2:0x2008+0x4b]
        Line 110: " lazy lazy while lazy lazy into the while into over floppy tiny 1320"  [#2:0x2055+0x44]
        Line 111: " boards dogs old disks quick while disks over into into dogs boards 1332"  [#2:0x209b+0x48]
        Line 112: " lazy into and tiny into lazy quick disks tiny brown quick the 1344"  [#2:0x20e5+0x43]
        Line 113: " while brown old archivers fox and bytes old bytes tiny archivers squeeze 1356"  [#2:0x212a+0x4e]
        Line 114: " bulletin while jumps over quick into over lazy while disks while tiny 1368"  [#2:0x217a+0x4b]
        Line 115: " dogs floppy and boards dogs floppy old fox into dogs into the 1380"  [#2:0x21c7+0x43]
        Line 116: " dogs disks bytes jumps archivers boards fox old boards while jumps lazy 1392"  [#2:0x220c+0x4d]
        Line 117: " quick disks over floppy jumps into lazy archivers floppy quick tiny lazy 1404"  [#2:0x225b+0x4e]
        Line 118: " boards jumps tiny over lazy the jumps while into old quick boards 1416"  [#2:0x22ab+0x47]
        Line 119: " old disks old old old the boards tiny over dogs the"  [#2:0x22f4+0x34]
  ▾ /data/noise.bin — 0x1200 bytes decompressed  [0xa84+0xeef]
      Data  [#3:0x0+0x1200]
  ▾ /data/tail.txt — UTF-8 text, LF line endings, 1 line  [0x1973+0x12]
      Encoding: "UTF-8"
      Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
    ▾ Lines — 1 line  [#4:0x0+0x12]
        Line 1: "short text member"  [#4:0x0+0x11]
