tests/snapshots/formats__psarc__test.psarc.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ test.psarc — PSARC 1.4, 1 entries, zlib, 0 bytes uncompressed  [0x0+0x4e]
    Magic: "PSAR"  [0x0+0x4]
    Version major: 1  [0x4+0x2]
    Version minor: 4  [0x6+0x2]
    Compression: "zlib"  [0x8+0x4]
    TOC length: 62  [0xc+0x4]
    TOC entry size: 30  [0x10+0x4]
    TOC entries: 1  [0x14+0x4]
    Block size: 65536  [0x18+0x4]
    Archive flags: 0x0  [0x1c+0x4]
  ▾ Table of contents — 1 entries  [0x20+0x1e]
    ▾ Entry 0 (manifest)  [0x20+0x1e]
        Name digest (MD5): 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |................|  [0x20+0x10]
        First block: 0  [0x30+0x4]
        Uncompressed size: 0 — 0 bytes  [0x34+0x5]
        Offset: 0x0  [0x39+0x5]
    Block sizes — 0 blocks, 2-byte entries  [0x3e+0x0]
  ▾ Manifest — 0x0 bytes decompressed  [0x0+0x0]
      Data  [#1:0x0+0x0]
